[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl_incubator"
version = "0.1.0"
description = "A reinforcement learning incubator project with Ray and TorchRL"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "torchrl>=0.2.0",
    "ray>=2.0.0",
    "gymnasium>=0.29.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rl_incubator --cov-report=term-missing"